--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -37,7 +37,7 @@
         app:layout_constraintTop_toBottomOf="@+id/login" />
 
     <EditText
-        android:text="ashujee@gmail.com"
+        android:text=""
         android:id="@+id/emailcontainer"
         android:layout_width="334dp"
         android:layout_height="30dp"
@@ -66,7 +66,7 @@
         app:layout_constraintTop_toBottomOf="@+id/emailcontainer" />
 
     <EditText
-        android:text="Ashu@123"
+        android:text=""
         android:inputType="textPassword"
         android:id="@+id/passwordcontainer"
         android:layout_width="334dp"
