--- a/app/src/main/res/layout/activity_payment_page.xml
+++ b/app/src/main/res/layout/activity_payment_page.xml
@@ -34,6 +34,7 @@
                         android:orientation="vertical">
 
                         <TextView
+                            android:textStyle="bold"
                             android:id="@+id/carname"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
