--- a/app/src/main/res/layout/list_of_guidlines.xml
+++ b/app/src/main/res/layout/list_of_guidlines.xml
@@ -20,7 +20,7 @@
 
             <ImageView
                 android:scaleType="fitXY"
-                android:id="@+id/senitizationimage"
+                android:id="@+id/offerimage"
                 android:src="@drawable/offertooros"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
