--- a/app/src/main/res/layout/terms_app.xml
+++ b/app/src/main/res/layout/terms_app.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:padding="10dp"
     android:layout_height="match_parent"
     android:background="@drawable/backgroung"
     android:orientation="vertical">
@@ -28,8 +29,9 @@
         android:textColor="#fff"
         android:textSize="15sp" />
     <TextView
-        android:textSize="16sp"
-        android:text="view more...."
+        android:textStyle="bold"
+        android:textSize="18sp"
+        android:text="(view more....)"
         android:layout_marginBottom="10dp"
         android:layout_marginTop="5dp"
         android:onClick="adview"
