--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="122dp"
-        android:text="FORGET PASSWORD"
+        android:text="Forget Password"
 
         android:textColor="#fff"
         android:textSize="30sp"
@@ -27,7 +27,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="70dp"
-        android:text="REGISTERED MOBILE NO.*"
+        android:text="Registered Mobile no.*"
         android:textColor="#fff"
         android:textSize="13sp"
         android:textStyle="bold"
@@ -37,7 +37,7 @@
         app:layout_constraintTop_toBottomOf="@+id/login" />
 
     <EditText
-
+        android:gravity="center_vertical"
         android:id="@+id/emailcontainer"
         android:layout_width="334dp"
         android:layout_height="30dp"
@@ -54,13 +54,14 @@
 
 
     <Button
+        android:textAllCaps="false"
         android:id="@+id/loginbtn"
         android:layout_width="150dp"
         android:layout_height="46dp"
         android:layout_marginTop="34dp"
         android:background="#90C208"
         android:scaleType="fitXY"
-        android:text="SUBMIT"
+        android:text="Submit"
         android:onClick="onClickSubmitInBtn"
         android:textColor="#fff"
         android:textSize="20sp"
