--- a/app/src/main/res/layout/activity_newpassword.xml
+++ b/app/src/main/res/layout/activity_newpassword.xml
@@ -34,6 +34,7 @@
         app:layout_constraintTop_toBottomOf="@+id/login" />
 
     <EditText
+        android:gravity="center_vertical"
         android:id="@+id/emailcontainer"
         android:layout_width="334dp"
         android:layout_height="30dp"
@@ -64,7 +65,7 @@
         app:layout_constraintTop_toBottomOf="@+id/emailcontainer" />
 
     <EditText
-
+        android:gravity="center_vertical"
         android:inputType="textPassword"
         android:id="@+id/passwordcontainer"
         android:layout_width="334dp"
