--- a/app/src/main/res/layout/activity_resetpassword.xml
+++ b/app/src/main/res/layout/activity_resetpassword.xml
@@ -34,6 +34,7 @@
         app:layout_constraintTop_toBottomOf="@+id/login" />
 
     <TextView
+        android:gravity="center_vertical"
         android:id="@+id/emailcontainer"
         android:layout_width="334dp"
         android:layout_height="30dp"
@@ -64,7 +65,7 @@
         app:layout_constraintTop_toBottomOf="@+id/emailcontainer" />
 
     <EditText
-
+        android:gravity="center_vertical"
         android:inputType="textPassword"
         android:id="@+id/passwordcontainer"
         android:layout_width="334dp"
@@ -81,13 +82,14 @@
         android:hint="Enter otp "
         app:layout_constraintTop_toBottomOf="@+id/password" />
       <Button
+          android:textAllCaps="false"
         android:id="@+id/loginbtn"
         android:layout_width="150dp"
         android:layout_height="46dp"
         android:layout_marginTop="34dp"
         android:background="#90C208"
         android:scaleType="fitXY"
-        android:text="VERIFY"
+        android:text="Verify"
         android:onClick="forgetPasswordClick"
         android:textColor="#fff"
         android:textSize="20sp"
