--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -18,9 +18,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:textStyle="bold"
-            android:textColor="#0AF316"
+            android:textColor="#fff"
             android:textSize="30dp"
-            android:text="ABOUT US"/>
+            android:text="About us"/>
 
         <TextView
             android:layout_marginTop="10dp"
@@ -31,7 +31,7 @@
             android:textStyle="bold"
             android:textColor="#0AF316"
             android:textSize="22dp"
-            android:text="OUR OBJECTIVE"/>
+            android:text="Our Objective"/>
 
 
         <TextView
@@ -44,6 +44,7 @@
             android:text="@string/objective"/>
 
         <TextView
+            android:textAllCaps="false"
             android:layout_marginTop="10dp"
             android:gravity="left"
             android:layout_marginStart="12dp"
@@ -52,7 +53,7 @@
             android:textStyle="bold"
             android:textColor="#0AF316"
             android:textSize="22dp"
-            android:text="OUR COMPANY"/>
+            android:text="Our Company"/>
 
 
         <TextView
