--- a/app/src/main/res/layout/activity_city_selection.xml
+++ b/app/src/main/res/layout/activity_city_selection.xml
@@ -40,7 +40,7 @@
                 app:navigationIcon="@drawable/navicon2">
 
                 <RelativeLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent">
 
                     <!--                    <ImageView-->
@@ -49,9 +49,9 @@
                     <!--                        android:src="@drawable/navicon2"/>-->
 
                     <ImageView
-                        android:layout_width="200dp"
+                        android:layout_alignParentStart="true"
+                        android:layout_width="150dp"
                         android:layout_height="match_parent"
-                        android:layout_marginLeft="10dp"
                         android:layout_marginTop="5dp"
                         android:layout_marginBottom="3dp"
                         android:src="@drawable/splashlogo" />
@@ -258,7 +258,8 @@
 
                 <ImageButton
 
-                    android:layout_width="match_parent"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="90dp"
                     android:layout_marginTop="15dp"
@@ -266,7 +267,7 @@
                     android:background="@drawable/shapewhitebackground"
                     android:backgroundTint="#93C45B"
                     android:onClick="onClickFindCarButton"
-                    android:scaleType="centerCrop"
+                    android:scaleType="centerInside"
                     android:src="@drawable/findcarbutton" />
 
 
@@ -597,10 +598,11 @@
 
                         <LinearLayout
 
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:background="@drawable/selfie"
                             android:orientation="horizontal">
+
 
                         </LinearLayout>
                     </HorizontalScrollView>
