--- a/app/src/main/res/layout/activity_help_and_support.xml
+++ b/app/src/main/res/layout/activity_help_and_support.xml
@@ -51,18 +51,18 @@
 
 
     <TextView
+        android:textColor="#fff"
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="160dp"
+        android:layout_marginTop="70dp"
         android:gravity="center_horizontal"
         android:text="Help And Support"
         android:textStyle="bold"
-        android:textColor="#FFFFFF"
-        android:textSize="24sp" />
+        android:textSize="30sp" />
     <LinearLayout
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="80dp"
         android:orientation="horizontal"
         android:layout_gravity="center_horizontal"
         android:layout_width="match_parent"
@@ -70,12 +70,14 @@
         android:layout_height="wrap_content">
 
         <ImageView
+            android:tint="@color/white"
             android:layout_width="30dp"
             android:layout_height="40dp"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="5dp"
             android:src="@drawable/ic_location_on_black_24dp" />
     <TextView
+
         android:layout_gravity="center"
         android:layout_marginLeft="5dp"
         android:layout_width="wrap_content"
@@ -94,6 +96,7 @@
         android:layout_height="wrap_content">
 
         <ImageView
+            android:tint="@color/white"
             android:layout_width="30dp"
             android:layout_height="40dp"
             android:layout_marginLeft="30dp"
@@ -117,6 +120,7 @@
         android:layout_height="wrap_content">
 
         <ImageView
+            android:tint="@color/white"
             android:layout_width="30dp"
             android:layout_height="40dp"
             android:layout_marginLeft="30dp"
@@ -140,6 +144,7 @@
         android:layout_height="wrap_content">
 
         <ImageView
+            android:tint="@color/white"
             android:layout_width="30dp"
             android:layout_height="40dp"
             android:layout_marginLeft="30dp"
