--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,8 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="72dp"
-        android:text="LOGIN"
-
+        android:text="Login"
         android:textColor="#fff"
         android:textSize="35sp"
         android:textStyle="bold"
@@ -83,13 +82,14 @@
         app:layout_constraintTop_toBottomOf="@+id/password" />
 
     <Button
+        android:textAllCaps="false"
         android:id="@+id/loginbtn"
         android:layout_width="150dp"
         android:layout_height="46dp"
         android:layout_marginTop="34dp"
         android:background="#90C208"
         android:scaleType="fitXY"
-        android:text="LOGIN"
+        android:text="Login"
         android:onClick="onClickSignInBtn"
         android:textColor="#fff"
         android:textSize="20sp"
