--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="SIGNUP"
+        android:text="Signup"
         android:textColor="#fff"
         android:textSize="35sp"
         android:textStyle="bold"
@@ -42,7 +42,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
-                android:text="NAME*"
+                android:text="Name*"
                 android:textColor="#fff"
                 android:textSize="13sp"
                 android:textStyle="bold"
@@ -70,7 +70,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
-                android:text="E-MAIL*"
+                android:text="E-mail*"
                 android:textColor="#fff"
                 android:textSize="13sp"
                 android:textStyle="bold"
@@ -99,7 +99,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
-                android:text="MOBILE NO *"
+                android:text="Mobile no*"
                 android:textSize="13sp"
                 android:textStyle="bold"
                 android:textColor="#fff"
@@ -128,7 +128,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
-                android:text="PASSWORD*"
+                android:text="Password*"
                 android:textSize="13sp"
                 android:textStyle="bold"
                 android:textColor="#fff"
@@ -159,7 +159,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
                 android:layout_marginBottom="12dp"
-                android:text="RE-ENTER PASSWORD*"
+                android:text="Re-enter password*"
                 android:textSize="13sp"
                 android:textStyle="bold"
                 android:textColor="#fff"
@@ -189,7 +189,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
-                android:text="DOB*"
+                android:text="Dob*"
                 android:textSize="13sp"
                 android:textStyle="bold"
                 android:textColor="#fff"
@@ -236,7 +236,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
-                android:text="DL No*"
+                android:text="Dl No*"
                 android:textColor="#fff"
                 android:textSize="13sp"
                 android:textStyle="bold"
@@ -387,7 +387,7 @@
 <!--            </LinearLayout>-->
 
             <LinearLayout
-                android:layout_width="334dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 app:layout_constraintStart_toStartOf="parent"
@@ -395,6 +395,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/aadharcontainer">
 
                 <CheckBox
+                    android:buttonTint="@android:color/black"
                     android:layout_marginLeft="15dp"
                     android:id="@+id/checkBox"
                     android:layout_width="wrap_content"
@@ -402,7 +403,7 @@
                     android:layout_marginTop="12dp"
                     android:layout_marginBottom="8dp"
                     android:textColor="#fff"
-                    android:text="I have read all"
+                    android:text=""
                     android:textSize="8sp" />
 
                 <TextView
@@ -412,11 +413,12 @@
                     android:layout_marginTop="12dp"
                     android:layout_marginBottom="8dp"
                     android:onClick="termsc"
-                    android:text=" TERMS AND CONDITIONS"
+                    android:text="I have read and accepted all the TERMS AND CONDITIONS"
                     android:textColor="#fff"
                     android:textSize="8sp"></TextView>
                 <Button
-                    android:layout_marginLeft="40dp"
+                    android:textAllCaps="false"
+                    android:layout_marginLeft="10dp"
                     android:id="@+id/registerbtn"
                     android:layout_width="wrap_content"
                     android:layout_height="35dp"
