--- a/app/src/main/res/layout/carnooking.xml
+++ b/app/src/main/res/layout/carnooking.xml
@@ -155,13 +155,13 @@
             android:id="@+id/textView14"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="48dp"
+            android:layout_marginStart="15dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="304dp"
             android:layout_marginBottom="57dp"
-            android:text="RENTAL"
-            android:textColor="#000000"
-            android:textSize="20sp"
+            android:text="Rental"
+            android:textColor="#fff"
+            android:textSize="23sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -205,9 +205,9 @@
                 android:paddingTop="5dp"
                 android:paddingRight="12dp"
                 android:paddingBottom="4dp"
-                android:text="BOOK NOW"
+                android:text="Book Now"
                 android:textColor="#fff"
-                android:textSize="28sp"
+                android:textSize="20sp"
                 android:textStyle="bold" />
         </LinearLayout>
 
