--- a/app/src/main/res/layout/navheader.xml
+++ b/app/src/main/res/layout/navheader.xml
@@ -25,7 +25,7 @@
             android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Welcome !!"
+            android:text="Welcome"
             android:textSize="24sp"
             android:fontFamily="monospace" />
 
@@ -34,7 +34,7 @@
             android:textColor="#F8F7F7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Guest User"
+            android:text=""
             android:textSize="17sp"
             app:fontFamily="monospace" />
 
