--- a/app/src/main/res/layout/terms_app.xml
+++ b/app/src/main/res/layout/terms_app.xml
@@ -12,7 +12,18 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+        <TextView
+            android:textStyle="bold"
+            android:textColor="#fff"
+            android:textSize="30dp"
+            android:layout_marginTop="15dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Terms And Condition"
+            android:layout_gravity="center_horizontal"/>
     <TextView
+        android:layout_marginTop="15dp"
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
