--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -358,6 +358,7 @@
 
             <Button
 
+                android:textAllCaps="false"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:id="@+id/registerbtn"
