--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -20,7 +20,7 @@
             android:textStyle="bold"
             android:textColor="#fff"
             android:textSize="30dp"
-            android:text="About us"/>
+            android:text="About Us"/>
 
         <TextView
             android:layout_marginTop="10dp"
@@ -29,7 +29,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:textStyle="bold"
-            android:textColor="#0AF316"
+            android:textColor="#fff"
             android:textSize="22dp"
             android:text="Our Objective"/>
 
@@ -51,7 +51,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:textStyle="bold"
-            android:textColor="#0AF316"
+            android:textColor="#fff"
             android:textSize="22dp"
             android:text="Our Company"/>
 
@@ -65,16 +65,16 @@
             android:layout_height="match_parent"
             android:text="@string/company"/>
 
-        <TextView
-            android:layout_marginTop="10dp"
-            android:gravity="left"
-            android:layout_marginStart="12dp"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:textStyle="bold"
-            android:textColor="#0AF316"
-            android:textSize="18dp"
-            android:text="Conveying Joy through ride of yourlife!!"/>
+<!--        <TextView-->
+<!--            android:layout_marginTop="10dp"-->
+<!--            android:gravity="left"-->
+<!--            android:layout_marginStart="12dp"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:textStyle="bold"-->
+<!--            android:textColor="#fff"-->
+<!--            android:textSize="18dp"-->
+<!--            android:text="Conveying Joy through ride of yourlife!!"/>-->
 
 
 
