--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -26,7 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
-        android:text="E-MAIL ID/MOBILE NO.*"
+        android:text="E-mail id/Mobile no.*"
         android:textColor="#fff"
         android:textSize="13sp"
         android:textStyle="bold"
@@ -55,7 +55,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
-        android:text="PASSWORD*"
+        android:text="Password*"
         android:textColor="#fff"
         android:textSize="13sp"
         android:textStyle="bold"
