--- a/app/src/main/res/layout/activity_newpassword.xml
+++ b/app/src/main/res/layout/activity_newpassword.xml
@@ -82,6 +82,7 @@
         android:hint="confirm password "
         app:layout_constraintTop_toBottomOf="@+id/password" />
     <Button
+        android:textAllCaps="false"
         android:id="@+id/loginbtn"
         android:layout_width="150dp"
         android:layout_height="46dp"
