--- a/app/src/main/res/layout/activity_otp_verification.xml
+++ b/app/src/main/res/layout/activity_otp_verification.xml
@@ -60,6 +60,7 @@
         />
 
     <Button
+        android:textAllCaps="false"
         android:layout_width="wrap_content"
         android:layout_height="80dp"
         android:layout_gravity="center"
