--- a/app/src/main/res/layout/activity_resetpassword.xml
+++ b/app/src/main/res/layout/activity_resetpassword.xml
@@ -24,7 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
-        android:text="MOBILE NO.*"
+        android:text="Mobile no*"
         android:textColor="#fff"
         android:textSize="13sp"
         android:textStyle="bold"
