--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#FF9CCC65</color>
     <color name="white">#FFFFFF</color>
+    <color name="green">#8EFC0D</color>
 </resources>
