--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -189,7 +189,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
-                android:text="Dob*"
+                android:text="DOB*"
                 android:textSize="13sp"
                 android:textStyle="bold"
                 android:textColor="#fff"
