--- a/app/src/main/res/layout/activity_newpassword.xml
+++ b/app/src/main/res/layout/activity_newpassword.xml
@@ -34,6 +34,7 @@
         app:layout_constraintTop_toBottomOf="@+id/login" />
 
     <EditText
+        android:inputType="textPassword"
         android:gravity="center_vertical"
         android:id="@+id/emailcontainer"
         android:layout_width="334dp"
@@ -60,7 +61,7 @@
         android:textSize="13sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.176"
+        app:layout_constraintHorizontal_bias="0.113"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/emailcontainer" />
 
