--- a/app/src/main/res/layout/activity_payment_page.xml
+++ b/app/src/main/res/layout/activity_payment_page.xml
@@ -362,9 +362,9 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
+                    android:layout_marginLeft="30dp"
                     android:layout_marginTop="4dp"
-                    android:text="PRICING"
+                    android:text="Pricing"
                     android:textColor="#fff"
                     android:textSize="18sp"
                     android:textStyle="bold" />
@@ -406,44 +406,44 @@
                         android:textStyle="bold" />
                 </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="30dp">
+<!--                <LinearLayout-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="30dp">-->
 
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="30dp"
-                        android:layout_marginTop="3dp"
-                        android:layout_weight="3"
-                        android:text="Delivery and Pick Up Charges"
+<!--                    <TextView-->
+<!--                        android:layout_width="0dp"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_marginLeft="30dp"-->
+<!--                        android:layout_marginTop="3dp"-->
+<!--                        android:layout_weight="3"-->
+<!--                        android:text="Delivery and Pick Up Charges"-->
 
-                        android:textColor="#fff"
-                        android:textSize="16sp" />
+<!--                        android:textColor="#fff"-->
+<!--                        android:textSize="16sp" />-->
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+<!--                    <TextView-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
 
-                        android:layout_marginTop="4dp"
-                        android:text="₹"
-                        android:textColor="#fff"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
+<!--                        android:layout_marginTop="4dp"-->
+<!--                        android:text="₹"-->
+<!--                        android:textColor="#fff"-->
+<!--                        android:textSize="16sp"-->
+<!--                        android:textStyle="bold" />-->
 
-                    <TextView
-                        android:id="@+id/delivery"
-                        android:layout_width="0dp"
-                        
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="3dp"
-                        android:layout_marginTop="4dp"
-                        android:layout_weight="1"
-                        android:text="0"
-                        android:textColor="#fff"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
-                </LinearLayout>
+<!--                    <TextView-->
+<!--                        android:id="@+id/delivery"-->
+<!--                        android:layout_width="0dp"-->
+<!--                        -->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_marginLeft="3dp"-->
+<!--                        android:layout_marginTop="4dp"-->
+<!--                        android:layout_weight="1"-->
+<!--                        android:text="0"-->
+<!--                        android:textColor="#fff"-->
+<!--                        android:textSize="16sp"-->
+<!--                        android:textStyle="bold" />-->
+<!--                </LinearLayout>-->
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="30dp">
@@ -565,11 +565,11 @@
                     android:background="#fff" />
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="20dp">
+                    android:layout_height="25dp">
                     <TextView
                         android:text="Total"
                         android:layout_marginLeft="30dp"
-                        android:textSize="16sp"
+                        android:textSize="18sp"
                         android:textColor="#fff"
                         android:layout_width="0dp"
                         android:layout_weight="3"
@@ -587,7 +587,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-
+                            android:textSize="18sp"
                             android:text="₹"
                             android:textColor="#fff" />
 
@@ -597,17 +597,17 @@
                             android:layout_width="0dp"
                             android:layout_weight="1"
                             android:layout_height="wrap_content"
-
+                            android:textSize="18sp"
                             android:text="0"
                             android:paddingRight="9dp"
-                            android:textColor="#88F30B"
+                            android:textColor="#fff"
                             android:textStyle="bold" />
 <!--                    </LinearLayout>-->
                 </LinearLayout>
                 <TextView
                     android:text="[Inclusive of all Taxes]"
                     android:layout_marginLeft="30dp"
-                    android:textSize="16sp"
+                    android:textSize="18sp"
                     android:textColor="#fff"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
