--- a/app/src/main/res/layout/carnooking.xml
+++ b/app/src/main/res/layout/carnooking.xml
@@ -155,7 +155,7 @@
             android:id="@+id/textView14"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="304dp"
             android:layout_marginBottom="57dp"
@@ -176,7 +176,7 @@
             android:layout_marginLeft="10dp"
             android:text="₹1500"
             android:textColor="#fff"
-            android:textSize="35sp"
+            android:textSize="30sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -187,6 +187,7 @@
             app:layout_constraintVertical_bias="0.0" />
 
         <LinearLayout
+            android:layout_marginTop="25dp"
             android:id="@+id/buttonlinearLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
